infra/ingress/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-route
  namespace: r-clone
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/api/auth`)
      priority: 2
      services:
        - kind: Service
          name: auth
          port: 8080

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-route
  namespace: r-clone
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      priority: 1
      services:
        - kind: Service
          name: frontend
          port: 3000
---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-auth
  namespace: r-clone
spec:
  forwardAuth:
    address: "http://auth/api/auth/verify"
